Add birthday surprise website

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ h1{font-size:2rem;margin-bottom:5px}
 
 <!-- 💌 LETTER BUTTON (appears after last slide) -->
 <div id="letterTrigger" class="letter-trigger">
-    <button onclick="showLetter()">💌 एक शेवटचा संदेश माझ्या Mumma साठी</button>
+    <button onclick="showLetter()">💌 एक संदेश माझ्या Mumma साठी</button>
 </div>
 
 <!-- 💌 LETTER -->
